--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,11 @@
+
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+@tailwind utilities; 
 
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+
+/*   
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -30,4 +34,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+}  */
